<resources>
    <string name="app_name">먹플리</string>

    <!-- Google Cloud Console › OAuth 2.0 클라이언트(웹 애플리케이션) ID -->
    <string name="server_client_id">
        691810024292-sjde8t68sgo7lrtrm6frm1h7ncgi0hio.apps.googleusercontent.com
    </string>
    <string name="search">검색</string>
    <string name="camera">카메라</string>
    <string name="feed_photo">피드 사진</string>
    <string name="close"><![CDATA[<resources>\n    <string name=\"close\">닫기</string>\n</resources>]]></string>
    <string name="back">뒤로</string>
    <string name="desc_profile_list">프로필 목록</string>
    <string name="location">Location</string>
    <string name="profile_image">Profile image</string>
    <string name="desc_profile_grid">Profile grid</string>
    <string name="profile">프로필</string>
    <string name="account">계정</string>
    <string name="likes">좋아요</string>
    <string name="notification">알림</string>
    <string name="policy">약관 및 개인정보</string>
    <string name="edit_region"><u>수정하기</u></string>
    <string name="delete">삭제</string>
    <string name="empty"></string>
    <string name="detail" ><u>상세보기</u></string>
    <string name="favorite" />
    <string name="saving">저장 중…</string>
    <string name="send"></string>
    <string name="unfollow">언팔로우</string>
    <string name="edit_roadmap"></string>



</resources>
